--- a/assets/stylesheets/kitten/organisms/dropdowns/_dropdown.scss
+++ b/assets/stylesheets/kitten/organisms/dropdowns/_dropdown.scss
@@ -70,7 +70,7 @@
     margin-top: -10px;
 
     @include k-media-xs {
-      min-width: auto;
+      min-width: 0;
       width: 100%;
     }
 
